fix: adjust media screen width to avoid text wrapping when displaying temperature ranges

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -321,13 +321,13 @@
   padding: 8px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 520px) {
   .temp-range {
     display: none;
   }
 }
 
-@media screen and (min-width: 501px) {
+@media screen and (min-width: 521px) {
   .temp-single {
     display: none;
   }
